[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Patpat"
version = "1.2.0"
authors = [{name = "Weiheng Liao"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "tqdm",
    "pyteomics",
    "pandas",
]


[tool.setuptools]
packages = [
    "patpat",
    "example",
]